--- a/index.html
+++ b/index.html
@@ -1,127 +1,188 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Data Aset SMPN 10 Banawa Selatan</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <style>
-    /* (CSS seperti semula) */
-    #sidebar { /* ... */ }
-    /* ... */
-    .thumbnail { max-width:100px; max-height:100px; object-fit:contain; }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Data Aset SMPN 10 Banawa Selatan</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+<style>
+  body { font-family: Arial, sans-serif; }
+  .thumbnail { max-width: 100px; max-height: 100px; object-fit: contain; }
+</style>
 </head>
 <body>
-  <!-- (Navbar sidebar seperti semula) -->
-  <div class="container">
-    <h2 class="mb-4">Data Aset Peralatan dan Mesin</h2>
-    <div class="row mb-3">
-      <div class="col-md-6 mb-2"><input type="text" id="searchInput" class="form-control" placeholder="Cari data..." /></div>
-      <div class="col-md-6 mb-2"><select id="kecamatanFilter" class="form-select"><option value="">Semua Kecamatan</option></select></div>
+
+<div class="container my-4">
+  <h2 class="mb-4">Data Aset Peralatan dan Mesin</h2>
+
+  <div class="row mb-3">
+    <div class="col-md-6 mb-2">
+      <input type="text" id="searchInput" class="form-control" placeholder="Cari data..." />
     </div>
-    <div class="table-responsive">
-      <table class="table table-bordered table-striped align-middle">
-        <thead id="tableHead" class="table-light"></thead>
-        <tbody id="tableBody"></tbody>
-      </table>
+    <div class="col-md-6 mb-2">
+      <select id="kecamatanFilter" class="form-select">
+        <option value="">Semua Kecamatan</option>
+      </select>
     </div>
-    <nav><ul class="pagination justify-content-center" id="pagination"></ul></nav>
   </div>
-  <div class="modal fade" id="previewModal" tabindex="-1">
-    <div class="modal-dialog modal-fullscreen modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Preview Dokumen</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-        </div>
-        <div class="modal-body"><div class="row g-3" id="previewContentRow"></div></div>
+
+  <div class="table-responsive">
+    <table class="table table-bordered table-striped align-middle">
+      <thead id="tableHead" class="table-light"></thead>
+      <tbody id="tableBody"></tbody>
+    </table>
+  </div>
+
+  <nav>
+    <ul class="pagination justify-content-center" id="pagination"></ul>
+  </nav>
+</div>
+
+<!-- Modal Preview -->
+<div class="modal fade" id="previewModal" tabindex="-1">
+  <div class="modal-dialog modal-fullscreen modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Preview Dokumen</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        <div class="row g-3" id="previewContentRow"></div>
       </div>
     </div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    // (Script sidebar seperti semula)
-    const sheetID = "152oNQyrJEeg-xW3okB2LKbGIUapxDakDMCbDjqpDl3U";
-    const sheetURL = `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?tqx=out:json&gid=0`;
-    let fullData = [], filteredData = [], headers = [], currentPage = 1, rowsPerPage = 40;
+</div>
 
-    fetch(sheetURL).then(r => r.text()).then(t => {
-      const json = JSON.parse(t.substr(t.indexOf('{')).slice(0, -2));
-      headers = json.table.cols.map(c => c.label);
-      fullData = json.table.rows.map(r => r.c.map(c => (c && c.v) || ""));
-      filteredData = [...fullData];
-      renderTableHeader();
-      renderFilterOptions();
-      applyFilters();
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+const sheetID = "152oNQyrJEeg-xW3okB2LKbGIUapxDakDMCbDjqpDl3U";
+const sheetURL = `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?tqx=out:json&gid=0`;
+let fullData = [], filteredData = [], headers = [], currentPage = 1, rowsPerPage = 40;
+
+fetch(sheetURL)
+  .then(r => r.text())
+  .then(t => {
+    const json = JSON.parse(t.substr(t.indexOf('{')).slice(0, -2));
+    headers = json.table.cols.map(c => c.label);
+    fullData = json.table.rows.map(r => r.c.map(c => (c && c.v) || ""));
+    filteredData = [...fullData];
+    renderTableHeader();
+    renderFilterOptions();
+    applyFilters();
+  });
+
+function renderTableHeader() {
+  document.getElementById("tableHead").innerHTML =
+    "<tr>" + headers.map(h => `<th>${h}</th>`).join('') + "<th>Preview Semua</th></tr>";
+}
+
+function extractDriveFileId(url) {
+  const match = url.match(/[-\w]{25,}/);
+  return match ? match[0] : "";
+}
+
+function openPreviewModalGrid(files) {
+  const container = document.getElementById("previewContentRow");
+  container.innerHTML = "";
+  files.forEach(f => {
+    const col = document.createElement("div");
+    col.className = "col-md-6";
+    col.innerHTML = `
+      <div class="border rounded p-2 shadow-sm">
+        <h6>${f.label}</h6>
+        <iframe src="https://drive.google.com/file/d/${f.fileId}/preview"
+                class="w-100" style="height:600px;border:none;"></iframe>
+      </div>`;
+    container.appendChild(col);
+  });
+  new bootstrap.Modal(document.getElementById("previewModal")).show();
+}
+
+function renderTable() {
+  const tbody = document.getElementById("tableBody");
+  tbody.innerHTML = "";
+  const pageData = filteredData.slice((currentPage-1)*rowsPerPage, currentPage*rowsPerPage);
+
+  pageData.forEach(row => {
+    const tr = document.createElement("tr");
+    let rowFiles = [];
+
+    row.forEach((cell, i) => {
+      const td = document.createElement("td");
+      if (typeof cell === "string" && cell.startsWith("https://")) {
+        const fileId = extractDriveFileId(cell);
+        const label = headers[i];
+        td.innerHTML = `
+          <a href="${cell}" target="_blank" class="btn btn-sm btn-primary">Lihat Data</a>
+          <button class="btn btn-sm btn-outline-secondary mt-1"
+            onclick="openPreviewModalGrid([{label:'${label}',fileId:'${fileId}'}])">Preview</button>
+          <a href="https://drive.google.com/uc?export=download&id=${fileId}"
+            class="btn btn-sm btn-success mt-1">Unduh</a>`;
+        rowFiles.push({ label, fileId });
+      } else {
+        td.textContent = cell;
+      }
+      tr.appendChild(td);
     });
 
-    function renderTableHeader() {
-      document.getElementById("tableHead").innerHTML =
-        "<tr>" + headers.map(h => `<th>${h}</th>`).join('') + "<th>Preview Semua</th></tr>";
-    }
-    function extractDriveFileId(url) {
-      const match = url.match(/[-\w]{25,}/);
-      return match ? match[0] : "";
-    }
-    function openPreviewModalGrid(files) {
-      const container = document.getElementById("previewContentRow");
-      container.innerHTML = "";
-      files.forEach(f => {
-        const col = document.createElement("div");
-        col.className = "col-md-6";
-        col.innerHTML = `<div class="border rounded p-2 shadow-sm"><h6>${f.label}</h6>
-          <iframe src="https://drive.google.com/file/d/${f.fileId}/preview" class="w-100" style="height:600px;border:none;"></iframe></div>`;
-        container.appendChild(col);
-      });
-      new bootstrap.Modal(document.getElementById("previewModal")).show();
-    }
+    const tdAction = document.createElement("td");
+    tdAction.innerHTML = rowFiles.length
+      ? `<button class="btn btn-sm btn-dark"
+           onclick='openPreviewModalGrid(${JSON.stringify(rowFiles)})'>Preview Semua</button>`
+      : "-";
+    tr.appendChild(tdAction);
+    tbody.appendChild(tr);
+  });
 
-    function renderTable() {
-      const tbody = document.getElementById("tableBody");
-      tbody.innerHTML = "";
-      const pageData = filteredData.slice((currentPage-1)*rowsPerPage, currentPage*rowsPerPage);
-      pageData.forEach(row => {
-        const tr = document.createElement("tr");
-        let rowFiles = [];
-        row.forEach((cell, i) => {
-          const td = document.createElement("td");
-          if (typeof cell === "string" && cell.startsWith("https://")) {
-            const fileId = extractDriveFileId(cell);
-            const label = headers[i];
-            td.innerHTML = `
-              <a href="${cell}" target="_blank" class="btn btn-sm btn-primary">Lihat Data</a>
-              <button class="btn btn-sm btn-outline-secondary mt-1" onclick="openPreviewModalGrid([{label:'${label}',fileId:'${fileId}'}])">Preview</button>
-              <a href="https://drive.google.com/uc?export=download&id=${fileId}" class="btn btn-sm btn-success mt-1">Unduh</a>`;
-            rowFiles.push({ label, fileId });
-          } else {
-            td.textContent = cell;
-          }
-          tr.appendChild(td);
-        });
-        const tdAction = document.createElement("td");
-        tdAction.innerHTML = rowFiles.length
-          ? `<button class="btn btn-sm btn-dark" onclick='openPreviewModalGrid(${JSON.stringify(rowFiles)})'>Preview Semua</button>`
-          : "-";
-        tr.appendChild(tdAction);
-        tbody.appendChild(tr);
-      });
-    }
+  renderPagination();
+}
 
-    function renderPagination() {
-      // (Pagination seperti semula)
-    }
-    function applyFilters() {
-      // (Filtering seperti semula)
-    }
-    function renderFilterOptions() {
-      // (Filter options seperti semula)
-    }
+function renderPagination() {
+  const pageCount = Math.ceil(filteredData.length / rowsPerPage);
+  const pagination = document.getElementById("pagination");
+  pagination.innerHTML = "";
 
-    document.getElementById("searchInput").addEventListener("input", applyFilters);
-    document.getElementById("kecamatanFilter").addEventListener("change", applyFilters);
-  </script>
+  for (let i = 1; i <= pageCount; i++) {
+    const li = document.createElement("li");
+    li.className = `page-item ${i === currentPage ? "active" : ""}`;
+    li.innerHTML = `<a class="page-link" href="#">${i}</a>`;
+    li.addEventListener("click", (e) => {
+      e.preventDefault();
+      currentPage = i;
+      renderTable();
+    });
+    pagination.appendChild(li);
+  }
+}
+
+function applyFilters() {
+  const search = document.getElementById("searchInput").value.toLowerCase();
+  const kecamatan = document.getElementById("kecamatanFilter").value;
+  filteredData = fullData.filter(row => {
+    const matchSearch = row.some(cell => String(cell).toLowerCase().includes(search));
+    const matchKecamatan = kecamatan ? row.includes(kecamatan) : true;
+    return matchSearch && matchKecamatan;
+  });
+  currentPage = 1;
+  renderTable();
+}
+
+function renderFilterOptions() {
+  const kecamatanIndex = headers.findIndex(h => h.toLowerCase().includes("kecamatan"));
+  if (kecamatanIndex === -1) return;
+  const select = document.getElementById("kecamatanFilter");
+  const values = [...new Set(fullData.map(r => r[kecamatanIndex]).filter(v => v))];
+  values.forEach(v => {
+    const opt = document.createElement("option");
+    opt.value = v;
+    opt.textContent = v;
+    select.appendChild(opt);
+  });
+}
+
+document.getElementById("searchInput").addEventListener("input", applyFilters);
+document.getElementById("kecamatanFilter").addEventListener("change", applyFilters);
+</script>
 </body>
 </html>
