--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <!-- Sidebar -->
 <div class="sidebar">
-  <h5 class="px-3">BIDANG ASET DAERAH</h5>
+  <h5 class="px-3">DINAS PENDIDIKAN DONGGALA</h5>
   <ul class="nav flex-column px-2">
     <li class="nav-item">
       <a class="nav-link" href="#">KIB B</a>
